--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
+    "cytoscape": "^3.33.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-cookie": "^8.0.1",
