--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@tailwindcss/vite": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-force-graph": "^1.48.0",
+    "react-force-graph-2d": "^1.28.0",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
   },
