--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-force-graph": "^1.48.0",
     "react-force-graph-2d": "^1.28.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
