--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
+    "d3-force": "^3.0.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -25,6 +26,7 @@
     "react-force-graph-2d": "^1.28.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.2",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
